--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -118,6 +118,20 @@
             $("#sectionDiv").html('');
         }
 
+        function deleteITReturnDetailsDocument(itReturnDocumentId, filePath) {
+            $.ajax({
+                url: '/deletetITReturnDocument?Id=' + itReturnDocumentId + '&FilePath=' + filePath,
+                error: function () {
+                },
+                dataType: 'json',
+                success: function (data) {
+                    window.location.reload();
+                },
+                type: 'POST'
+            });
+            return false;
+        }
+
         $(".ddLitigationDD").change(function () {
             $("#sectionDiv").html('');
         });
@@ -380,6 +394,30 @@
                     });
                     $('.expand').each(function () {
                         $(this).nextUntil("tr.collapse").slideToggle(10);
+                    });
+
+                    $(".ddDocumentCategory").change(function () {
+                        var subDocumentCatObject = $(this).closest('table').find('.ddSubDocumentCategory');
+
+                        $.ajax({
+                            url: '/getSubDocumentCategories?documentCategoryId='
+                                + $(this).find("option:selected").val(),
+                            error: function () {
+                            },
+                            dataType: 'json',
+                            success: function (data) {
+                                subDocumentCatObject.html('');
+                                subDocumentCatObject.append('<option> Please Select</option>');
+                                $(data).each(function () {
+                                    var option = $('<option />');
+                                    option.attr('value', this.Id).html(this.Description);
+                                    subDocumentCatObject.append(option);
+                                });
+                            },
+                            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                            },
+                            type: 'GET'
+                        });
                     });
                 }
             });
