--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -34,7 +34,8 @@
                         @Html.Partial("_ITHeadDocumentsUploader",
                                 new ITHeadDocumentsUploaderModel(
                                     new List<ITReturnDocumentsDisplay>(), new ITHeadMaster()
-                                    , new ITReturnDetails()))
+                                    , new ITReturnDetails()
+                                    , new List<DocumentCategoryMaster>()))
 
             </div></div>
             </td>
