--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
@@ -32,6 +32,7 @@
                                     new List<ITReturnDocumentsDisplay>()
                                     , new ITHeadMaster()
                                     , new ITReturnDetails()
+                                    , new List<DocumentCategoryMaster>()
                                  )
                     )
                 </td>
