--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDocumentList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDocumentList.cshtml
@@ -11,7 +11,8 @@
     <thead>
         <th>Company Name</th>
         <th>Financial Year</th>
-        <th>IT Head</th>
+        <th>Document Category</th>
+        <th>Sub Category</th>
         <th>File Name</th>
         <th>Actions</th>
     </thead>
@@ -25,7 +26,10 @@
                 @document.FinancialYear
             </td>
             <td class="tdBorder">
-                @document.ITHeadDescription
+                @document.DocumentCategoryName
+            </td>
+            <td class="tdBorder">
+                @document.SubDocumentCategoryName
             </td>
             <td class="tdBorder">
                 @document.FileName
