--- a/LitigationSoftware/LSWebApp/Views/Shared/_LayoutDynemicMenu.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_LayoutDynemicMenu.cshtml
@@ -79,6 +79,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     <script src="@Url.Content("~/Scripts/customDD.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/manageSubHead.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/manageSubDocumentCategory.js")" type="text/javascript"></script>
     @RenderSection("scripts", required: false)
 
 </body>
