--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -35,7 +35,8 @@
                                 new ITHeadDocumentsUploaderModel(
                                     new List<ITReturnDocumentsDisplay>(), new ITHeadMaster()
                                     , new ITReturnDetails()
-                                    , new List<DocumentCategoryMaster>()))
+                                    , new List<DocumentCategoryMaster>()
+                                    , new List<SubDocumentCategoryMaster>()))
 
             </div></div>
             </td>
