--- a/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
@@ -50,6 +50,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     <script src="@Url.Content("~/Scripts/customDD.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/manageSubHead.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/manageSubDocumentCategory.js")" type="text/javascript"></script>
     @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
     @RenderSection("scripts", required: false)
 
