UI changes for Inputsheet and MATCreditStatus

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
@@ -65,7 +65,7 @@
     <td></td>
     <td>
         <div class="row col-12">
-            @Model.ITHeadMasterList[Model.ITHead].Description:-
+            @Model.ITHeadMasterList[Model.ITHead].Description
             @if (Model.ITReturnDetailsObject.Id > 0
             && Model.ITHeadMasterList[Model.ITHead].IsSpecialIncomeEnabled)
             {
