--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -96,7 +96,7 @@
         {    <tr>
                 <td></td>
                 <td></td>
-                <td>Due date of filing the return/order:-</td>
+                <td>Due date of filing the return</td>
                 <td>
                     <div class="row col-12">
                         <div class="col-md-6">
